# econ-viz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
econ_viz/: __init__.py  exceptions.py  levels.py  parser.py
econ_viz/analysis/: __init__.py  homogeneity.py  levels.py
econ_viz/animation/: __init__.py  animator.py
econ_viz/canvas/: __init__.py  base.py  figure.py  layers.py  primitives.py
econ_viz/canvas/renderers/: __init__.py  budget.py  equilibrium.py  path.py  utility.py
econ_viz/cli/: __init__.py  errors.py  help.py  main.py  models.py  plot.py  resolve.py  solve_tex.py
econ_viz/components/: __init__.py  budget.py  equilibrium.py  indifference.py
econ_viz/consumer/: __init__.py  demand.py  edgeworth.py  edgeworth_compute.py  edgeworth_plotter.py  edgeworth_state.py  paths.py
econ_viz/contours/: __init__.py  level_policies.py
econ_viz/enums/: __init__.py  extension.py  layout.py  returns.py  utility.py
econ_viz/interactive/: __init__.py  widgets.py
econ_viz/io/: __init__.py  exporter.py
econ_viz/models/: __init__.py  advanced.py  core.py  parser.py  protocol.py  registry.py
econ_viz/optimizer/: __init__.py  analytic.py  comparative.py  slutsky.py  solver.py  statics.py
econ_viz/themes/: __init__.py  theme.py
econ_viz/utils/: __init__.py  logging.py
examples/: advanced_models.py  animation.py  edgeworth_box.py  equilibrium.py  figure_layouts.py  indifference_curves.py  latex_input.py  marshallian_demand.py  pcc_icc_paths.py  themes.py
notebook/: econ-viz Playground.ipynb
scripts/: release.sh
tests/: test_advanced_models.py  test_animation.py  test_canvas.py  test_cli.py  test_edgeworth.py  test_enums.py  test_figure.py  test_homogeneity.py  test_interactive.py  test_levels.py  test_models.py  test_optimizer.py  test_parser.py
