[project]
name = "econ-viz"
version = "0.1.4"
description = "A Python toolkit for producing publication-quality microeconomics diagrams."
readme = "README.md"
authors = [{ name = "Anthony Sung", email = "sungpinyue@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy (>=2.1.0,<3.0.0)", "matplotlib (>=3.6.0,<4.0.0)", "matplot2tikz (>=0.5.4,<0.6.0)", "scipy (>=1.9.0,<2.0.0)", "sympy (>=1.12.0,<2.0.0)"]

[project.scripts]
econ-viz = "econ_viz.cli:main"

[project.urls]
Homepage = "https://github.com/EconViz/econ-viz"
Repository = "https://github.com/EconViz/econ-viz"
"Bug Tracker" = "https://github.com/EconViz/econ-viz/issues"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=econ_viz --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["econ_viz"]
omit = ["econ_viz/logging.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
